--- a/src/comps/Settings/Settings.css
+++ b/src/comps/Settings/Settings.css
@@ -1,7 +1,12 @@
 .Settings {
     grid-column: 1/span 1;
     grid-row: 3/-1;
+    position: relative;
 }
 .icon-setting {
     fill: var(--light);
+    cursor: pointer;
+}
+.icon-setting:hover {
+    fill: var(--light-low);
 }
