--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,5 +2,6 @@
     --white : #ffffff;
     --light: #f1f5f9;
     --light-low: rgba(255, 255, 255, 0.445);
-    /* --light-grey: #d3d3d3; */
+    --dark: rgba(0,0,0,.81);
+    --light-blue: #29b6f6;
 }
