feat: clock and pooper

--- a/src/screens/Main/Main.css
+++ b/src/screens/Main/Main.css
@@ -7,4 +7,5 @@
     display: grid;
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto 1fr auto;
+    background-color: rgba(0,0,0,.28);
 }
