--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -2,6 +2,9 @@
     --white : #ffffff;
     --light: #f1f5f9;
     --light-low: rgba(255, 255, 255, 0.445);
+    --light-mild: rgba(255, 255, 255, 0.233);
     --dark: rgba(0,0,0,.81);
+    --grey: #2c2c2c;
+    --light-grey: #2c2c2ca4;
     --light-blue: #29b6f6;
 }
