--- a/src/comps/Search/Search.css
+++ b/src/comps/Search/Search.css
@@ -1,6 +1,7 @@
 .Search {
     grid-column: 1/span 1;
     grid-row: 1/span 1;
+    height: max-content;
 }
 .Search-container{
     font-size: .9rem;
